@@ -38,6 +38,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -147,7 +148,7 @@ public class RecurringActionFactory extends HibernateFactory {
             "left join web_customer org on org.id = ra.org_id" +
             ") ra ";
         List<Org> orgs = user.hasRole(RoleFactory.SAT_ADMIN) ? OrgFactory.lookupAllOrgs() : List.of(user.getOrg());
-        Map<String, Object> params = Map.of("orgsIds", orgs.stream().map(Org::getId).toList());
+        Map<String, Object> params = Map.of("orgsIds", orgs.stream().map(Org::getId).collect(Collectors.toList()));
 
         return new PagedSqlQueryBuilder("ra.recurring_action_id")
                 .select("ra.*")
