@@ -421,8 +421,8 @@ public class ContentSyncManagerTest extends JMockBaseTestCaseWithUser {
                 .toList();
 
         assertIterableEquals(
-                List.of(applicationsFeb, basesystemFeb).stream().distinct().sorted().toList(),
-                resultAppFeb.stream().distinct().sorted().toList()
+                List.of(applicationsFeb, basesystemFeb).stream().distinct().sorted().collect(Collectors.toList()),
+                resultAppFeb.stream().distinct().sorted().collect(Collectors.toList())
         );
 
         List<Channel> resultAppJan = SUSEProductFactory
@@ -430,8 +430,8 @@ public class ContentSyncManagerTest extends JMockBaseTestCaseWithUser {
                 .toList();
 
         assertIterableEquals(
-                List.of(applicationsJan, basesystemJan).stream().distinct().sorted().toList(),
-                resultAppJan.stream().distinct().sorted().toList()
+                List.of(applicationsJan, basesystemJan).stream().distinct().sorted().collect(Collectors.toList()),
+                resultAppJan.stream().distinct().sorted().collect(Collectors.toList())
         );
     }
 
@@ -828,7 +828,7 @@ public class ContentSyncManagerTest extends JMockBaseTestCaseWithUser {
         List<ChannelTemplate> r = basesystem.getChannelTemplates().stream()
             .filter(pr -> pr.getRootProduct().equals(sles))
             .filter(pr -> Arrays.asList(15000L, 15001L).contains(pr.getRepository().getSccId()))
-            .toList();
+            .collect(Collectors.toList());
         assertNotEmpty(r);
         r.forEach(pr -> {
                 assertNotNull(pr.getRepository());
@@ -849,7 +849,7 @@ public class ContentSyncManagerTest extends JMockBaseTestCaseWithUser {
         r = basesystem.getChannelTemplates().stream()
             .filter(pr -> pr.getRootProduct().equals(SUSEProductFactory.lookupByProductId(1941L)))
             .filter(pr -> Arrays.asList(15000L, 15001L).contains(pr.getRepository().getSccId()))
-            .toList();
+            .collect(Collectors.toList());
         assertNotEmpty(r);
         r.forEach(pr -> {
             assertNotNull(pr.getRepository());
@@ -871,7 +871,7 @@ public class ContentSyncManagerTest extends JMockBaseTestCaseWithUser {
         r = tools.getChannelTemplates().stream()
             .filter(pr -> pr.getRootProduct().equals(sles))
             .filter(pr -> Arrays.asList(15002L, 15003L).contains(pr.getRepository().getSccId()))
-            .toList();
+            .collect(Collectors.toList());
         assertNotEmpty(r);
         r.forEach(pr -> {
                 assertNotNull(pr.getRepository());
@@ -892,7 +892,7 @@ public class ContentSyncManagerTest extends JMockBaseTestCaseWithUser {
         r = tools.getChannelTemplates().stream()
             .filter(pr -> pr.getRootProduct().equals(SUSEProductFactory.lookupByProductId(1941L)))
             .filter(pr -> Arrays.asList(15002L, 15003L).contains(pr.getRepository().getSccId()))
-            .toList();
+            .collect(Collectors.toList());
         assertNotEmpty(r);
         r.forEach(pr -> {
                 assertNotNull(pr.getRepository());
@@ -1377,7 +1377,7 @@ public class ContentSyncManagerTest extends JMockBaseTestCaseWithUser {
         List<ChannelTemplate> availableChannels = csm.getAvailableChannels();
 
         List<String> avChanLanbels = availableChannels
-                .stream().map(ChannelTemplate::getChannelLabel).toList();
+                .stream().map(ChannelTemplate::getChannelLabel).collect(Collectors.toList());
 
         assertContains(avChanLanbels, "sles12-pool-x86_64");
         assertContains(avChanLanbels, "sle-12-cloud-compute5-updates-x86_64");
@@ -1743,7 +1743,7 @@ public class ContentSyncManagerTest extends JMockBaseTestCaseWithUser {
 
         // Remove the upgrade path via the predecessor Id
         csm.updateSUSEProducts(Stream.of(product1, product2.copy().setOnlinePredecessorIds(Collections.emptyList())
-                .build()).toList());
+                .build()).collect(Collectors.toList()));
 
         // There should be no upgrade paths
         assertTrue(SUSEProductFactory.lookupByProductId(product1Id).getUpgrades().isEmpty());
