@@ -62,6 +62,7 @@ import java.nio.file.Path;
 import java.util.Date;
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 /**
  * Tests for {@link SCCClient} methods.
@@ -94,7 +95,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -111,7 +112,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .toList();
+                .collect(Collectors.toList());
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -169,7 +170,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .toList();
+                .collect(Collectors.toList());
 
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         CredentialsFactory.storeCredentials(credentials);
@@ -205,7 +206,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -229,7 +230,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .toList();
+                .collect(Collectors.toList());
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -277,7 +278,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -299,7 +300,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().getServerInfo().getCheckin().equals(new Date(0)))
-                .toList();
+                .collect(Collectors.toList());
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -346,7 +347,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -430,7 +431,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -529,7 +530,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
